Accessibility: fixed warning label colour for better contrast

--- a/src/assets/styles/root.css
+++ b/src/assets/styles/root.css
@@ -8,7 +8,7 @@
   --secondary-light-color: rgba(128, 0, 0, 0.8);
   --info-color: rgb(33, 150, 243);
   --success-color: rgb(75, 181, 67);
-  --warning-color: rgb(255, 103, 0);
+  --warning-color: rgb(255, 130, 46);
   --error-color: rgb(220, 20, 49);
   --contrast-color: rgb(245, 197, 24);
 }
